adds html content

--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTM6201 Week 1</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>Qingjie (Clark) Shen</title>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>MT6201 Week 1</h1>
+            <h1>Qingjie (Clark) Shen</h1>
         </header>
         <main>
-            <p>Welcome to Web Dev II!</p>
+            <img src="pictures/aboutme.jpg" alt="This is a picture of me (Clark).">
+            <p>My name is Qingjie Shen, I'm from Shanghai, China. I have a background in mobile Game Design where I was responsible for the functional design but not the code writing. I come here to study Interactive Media Design to enhance my understanding of design and acquire usefull design skills that will help me further my career or even make a creer change.</p>
+            <p>I like RV travelling. I designed and renovated a RV with my girlfriend when I was in Shanghai. Our happiest moments are spent behind the wheel, exploring new destinations and capturing the beauty of the scenery through photography and videography. My dream is to design and build a new RV here in Canada and embark on a journey to discover the American continent.</p>
+            <dl class="clearfix">
+                <dt>Program</dt>
+                <dd>Interactive Media Design.</dd>
+            
+                <dt>Course</dt>
+                <dd>MT6201 Web Dev II.</dd>
+            
+                <dt>Hobbies</dt>
+                <dd>Photography, Cooking, Cycling, travelling.</dd>
+            </dl>
         </main>
     </div>
 </body>
